--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build",
+    "build": "ng build --base-href ./",
+    "build:github": "npm run delete:docs && npm run build && npm run copy:dist && npm run delete:dist",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "delete:docs": "del docs",
+    "delete:dist": "del dist",
+    "copy:dist": "copyfiles dist/pending-tasks/browser/* ./docs -f"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +31,8 @@
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
